syntax = "proto3";

package fileshare;

// El servicio define los m√©todos que puedes llamar remotamente
service FileService {
  // Sube (anuncia) los archivos disponibles de un peer
  rpc UploadFiles(UploadRequest) returns (UploadResponse) {}
}

// Mensaje de solicitud para subir (anunciar) archivos
message UploadRequest {
  string peerId = 1;
  repeated string files = 2; // Lista de nombres de archivos disponibles
}

// Mensaje de respuesta para confirmar la subida
message UploadResponse {
  bool success = 1;
  string message = 2;
}
